tests/ui/issues/issue-58857.stderr
error: negative bounds are not supported
  --> $DIR/issue-58857.rs:4:9
   |
LL | impl<A: !Valid> Conj<A>{}
   |         ^

error: aborting due to previous error

